# alibabacloud-ros-tool-transformer

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  build.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull.yml
.github/workflows/: auto_rules_version.yml  auto_version_bump.yml  build-binary.yml  deploy-docs.yml  test.yml
docs/: README.md  _navbar.md  _sidebar.md  bak.README.md  example-aws.md  example-c-tf.md  example-excel.md  example-ros-tf.md  example-ros2tf.md  example-tf.md  example.md  index.html  installation.md  sample-aws.md  sample-excel.md  sample-tf.md  sample.md  supported-types-cf.md  supported-types-ros2tf.md  supported-types-tf.md  supported-types.md  usage.md
docs/zh-cn/: README.md  _sidebar.md  example-aws.md  example-c-tf.md  example-cf.md  example-excel.md  example-ros-tf.md  example-ros2tf.md  example-tf.md  example.md  installation.md  sample-aws.md  sample-excel.md  sample-tf.md  sample.md  supported-types-cf.md  supported-types-ros2tf.md  supported-types-tf.md  supported-types.md  usage.md
frontend/: index.html  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  monaco.ts  styles.css  types.ts
frontend/src/components/: FileTree.tsx  LogConsole.tsx  ResultPane.tsx
rostran/: handler.py  wasm.py
rostran/cli/: __main__.py
rostran/core/: __init__.py  conditions.py  exceptions.py  format.py  mappings.py  meta_data.py  metadata.py  outputs.py  parameters.py  properties.py  reporter.py  resources.py  rule_manager.py  rules.py  rules_updater.py  settings.py  template.py  terraform.py  utils.py  workspace.py
rostran/handlers/: basic.py  merge.py  resource.py
rostran/providers/: __init__.py
rostran/providers/cloudformation/: template.py
rostran/providers/excel/: template.py
rostran/providers/ros/: functions.py  template.py  yaml_util.py
rostran/providers/terraform/: c_template.py  template.py  template_blocks.py
rostran/rules/: VERSIONS.json  tf_ali_ros_generate_mappings.json
rostran/rules/cloudformation/builtin/: association_property.yml  (+3 more)
rostran/rules/ros/: multiple_mappings.json
rostran/tools/: generate.py  parse_tf_ros.py
rostran/web/: __init__.py  _worker.py  examples.py  server.py  service.py
rostran/web/static/: .gitkeep  index.html
templates/cloudformation/: ec2_instance.json  eip.json  iam_role.json  scaling_group.json  vpc_sg.json  vpc_sg.yml
templates/excel/: EcsInstance.xlsx
templates/ros/: simple.yml
templates/terraform/alicloud/: main.tf  output.tf
tests/: conf.py  main.tf  test_build_binary.py  testing.py
tests/cli/: test_transform_logging.py  test_version.py
tests/core/: test_rules_updater.py  test_terraform_runner.py
tests/e2e/cloudformation/: test_aws_iam_managed_policy.py  test_aws_s3_bucket.py  testing.py
tests/e2e/ros/: test_ros2tf.py
tests/format/: test_format_conditions.py  test_format_mappings.py  test_format_metadata.py  test_format_outputs.py  test_format_parameters.py  test_format_resources.py  test_format_rules.py  test_format_template.py  test_format_workspace.py
tests/providers/cloudformation/: test_template.py
tests/providers/excel/: test_template.py
tests/providers/ros/: test_new_functions.py  test_ros2tf_resource.py  test_transform_to_tf.py  test_yaml.py
tests/providers/terraform/: __init__.py  alicloud.tfplan  template.yml  test_compatible_terraform.py  test_template_blocks.py  test_terraform_alicloud.py  test_terraform_count.py
tests/wasm/: test_playground_assets.py  test_playground_entrypoint.py
tests/web/: test_web_api.py
tools/: README.md  check_web_static.sh  exceptions.py  formatter.py  generator.py  resource.py  settings.py  tf_ali_ros_generate_mappings.json  utils.py
tools/cli/: __main__.py
web/frontend/: .gitignore  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/frontend/src/: App.tsx  api.ts  main.tsx  monaco.ts  styles.css  util.ts
website/: Makefile  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: installation.md  intro.md  usage.md
website/docs/examples/: cloudformation-to-ros.md  excel-to-ros.md  ros-terraform-to-terraform.md  ros-to-terraform.md  terraform-to-ros-compatible.md  terraform-to-ros.md
website/docs/supported-types/: cloudformation.md  ros-to-terraform.md  terraform.md
website/docs/usage/: format.md  rules.md  transform.md  web-service.md
website/scripts/: build_playground_assets.py  generate_supported_types.py
website/src/clientModules/: localeRedirect.mjs  localeRedirect.test.mjs
website/src/css/: custom.css
website/src/pages/: playground.tsx
(+2324 files in other folders)
